bugbox doesn't go behind the scroll bar now

--- a/src/stylesheets/bugsquasher.css
+++ b/src/stylesheets/bugsquasher.css
@@ -1,17 +1,17 @@
-.bug-container{ 
-    height: 300vh; 
+.bug-container {
+    height: 300vh;
     width: 100vw;
 }
 
-.bug-box{ 
+.bug-box {
     border: 5px solid salmon;
-    height: 100vh; 
-    width: 100vw;
+    height: 100vh;
+    width: 98vw;
     scale: 0;
     overflow: hidden;
 }
 
-.bug{ 
+.bug {
     height: 50px;
     width: 50px;
     position: absolute
